<resources>
    <string name="app_name">MedLook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="title_activity_menu">Menu</string>
    <string name="tab_text_1">Stock</string>
    <string name="tab_text_3">Appt.</string>
    <string name="tab_text_2">Records</string>
    <string name="tab_text_4">Maps</string>
    <string name="action_settings2">Profile</string>
    <string name="action_settings3">Log Out</string>
    <string name="title_activity_initial_page">InitialPage</string>
    <string name="medication_name">Name</string>
    <string name="medication_quantity">Quantity</string>
    <string name="medication_reset">Delete Medication</string>
    <string name="medication_add">Add Medication</string>
    <string name="medication_return">Return</string>
    <string name="medication_title"> Medication</string>
    <string name="medication_quantity_title">Quant.</string>
    <string name="cholesterol_value">New Record</string>
    <string name="heart_value">New Record</string>
    <string name="max_blood_value">New Systolic (Max) Record</string>
    <string name="min_blood_value">New Diastolic (Min) Record </string>
    <string name="weight_value">New Weight Registration</string>
    <string name="add_value">Add Value</string>
    <string name="add_values">Add Values</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="actual_password">Actual Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="save_new_password">Save New Password</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email</string>


</resources>
