<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
tools:context=".Add_Medication">

<EditText
    android:id="@+id/text_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/medication_name"
    android:nextFocusDown="@+id/text_quantity"
    android:singleLine="true" />

<EditText
    android:id="@+id/text_quantity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="250dp"
    android:hint="@string/medication_quantity"
    android:inputType="numberDecimal"
    android:singleLine="true" />

<LinearLayout
    android:id="@+id/layout_submit"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text_quantity"
    android:layout_margin="5dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/medication_add" />

    <Button
        android:id="@+id/button_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/medication_return" />

</LinearLayout>
</RelativeLayout>