<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddBP"
    android:layout_marginTop="50dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/password_change"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/actual_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:singleLine="true"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/new_password_confirm"
        android:singleLine="true"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:background="@drawable/bg_button"
        android:text="@string/save_new_password"
        android:padding="5dp"
        android:layout_gravity="center"/>

</LinearLayout>