<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBP"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/text_name1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/max_blood_value"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/text_name2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:hint="@string/min_blood_value"
        android:singleLine="true"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:background="@drawable/bg_button"
        android:text="@string/add_value"
        android:layout_gravity="center"/>

</LinearLayout>