<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:id="@+id/medication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_weight="40"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/medication_title" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_weight="60"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/medication_quantity_title"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_med_par"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"

       >

        <ListView
            android:id="@+id/list_med"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_calendar">
        </ListView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_height="wrap_content"
            android:text="@string/medication_add"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:layout_weight="50"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/medication_reset"
            android:layout_margin="10dp"
            android:layout_weight="50"
            />

    </LinearLayout>

</LinearLayout>

